--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="fetch_user">fetch user</string>
     <string name="confirm">Confirm</string>
     <string name="leave_a_comment"><u>Leave a comment</u></string>
+    <string name="recipes"><b>Recipes</b></string>
 </resources>
